k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: contact-api
spec:
  selector:
    matchLabels:
      app: contact-api
  replicas: 1
  minReadySeconds: 5
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: contact-api
    spec:
      containers:
        - name: contact-api
          image: harbor.atomicvr.co.uk/library/contact-api:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 10m
              memory: 10M
            limits:
              cpu: 20m
              memory: 20M
