k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: contact-api-service
spec:
  selector:
    app.kubernetes.io/name: ContactAPI
  ports:
    - protocol: TCP
      port: 80
      targetPort: 2536
